--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,30 +1,70 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      rendiApp
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <div class="ion-padding" style="text-align: center;">
-    <h1>Geo Localización</h1>
-    <p>Haga clic en el botón de abajo para obtener su ubicación actual.</p>
-  </div>
-  <div class="ion-padding">
-    <ion-item>
-      <ion-label>Longitude:{{longitude}}</ion-label>
-    </ion-item>
-    <ion-item>
-      <ion-label>Latitude:{{latitude}}</ion-label>
-    </ion-item>
-    <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+  <ion-toolbar>
+    <div class="ion-padding">Seleccione el motivo de su detención</div>
+  </ion-toolbar>
+
+  <ion-content [fullscreen]="true"> 
+  <div class="row">
+
+    <div class="column">
+      <ion-card color="light">
+        <ion-button color="light">
+          <img src="https://img.icons8.com/3d-fluency/94/null/inspection.png">
+        </ion-button>
+        <div>
+          <ion-label>Ticket o POS</ion-label>
+        </div>
+      </ion-card>
+    </div>
+
+    <div class="column">
+      <ion-card color="light">
+        <ion-button color="light">
+          <img src="https://img.icons8.com/3d-fluency/94/null/gas-station.png">
+        </ion-button>
+        <div>
+          <ion-label>Carga Combustible</ion-label>
+        </div>
+      </ion-card>
+    </div>
+
+    <div class="column">
+      <ion-card color="light">
+        <ion-button color="light">
+          <img src="https://img.icons8.com/3d-fluency/94/null/user-group-man-woman.png">
+        </ion-button>
+        <div>
+          <ion-label>Personal</ion-label>
+        </div>
+      </ion-card>
+    </div>
+
+    <div class="column">
+      <ion-card color="light">
+        <ion-button color="light">
+          <img src="https://img.icons8.com/3d-fluency/94/null/truck.png">
+        </ion-button>
+        <div>
+          <ion-label>Falla Camioneta</ion-label>
+        </div>
+      </ion-card>
+    </div>
+
+    <ion-fab vertical="bottom" horizontal="center" slot="fixed" style="margin-bottom: 10%;" >
+      <ion-label style="margin-left: -35%;">En donde me encuentro</ion-label>
       <ion-fab-button href="https://www.google.com/maps?q={{latitude}},{{longitude}}">
         <ion-icon name="map"></ion-icon>
       </ion-fab-button>
     </ion-fab>
-    <div class="map-responsive">
-      <iframe src="https://www.google.com/maps?q={{latitude}},{{longitude}}"> </iframe>
-    </div>
+
   </div>
-</ion-content>
+  </ion-content>
+
+</ion-header>
+
+<ion-footer>
+  <ion-title>
+    rendiApp
+  </ion-title>
+</ion-footer>
