--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -26,19 +25,52 @@
   text-decoration: none;
 }
 
-.map-responsive {
-
-  overflow: hidden;
-  padding-bottom: 56.25%;
-  position: relative;
-  height: 0;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-.map-responsive iframe {
-
-  left: 0;
-  top: 0;
+.column {
+  text-align: center;
+  float: left;
+  width: 50%;
   height: 100%;
+  /* Should be removed. Only for demonstration */
+}
+
+ion-card {
+  width: 95%;
+  margin: 5% auto;
+  height: 100%px;
+}
+
+ion-label {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+ion-title {
+  text-align: left;
+  font-weight: bold;
+}
+
+.ion-padding {
+  text-align: center;
+  font-weight: bold;
+}
+
+ion-button {
+  margin-top: 5%;
+  width: 90%;
+  height: 80%
+}
+
+img{
   width: 100%;
-  position: absolute;
+  height: 100%;
+}
+
+ion-toolbar {
+  opacity: .5
 }
