--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -56,7 +56,7 @@
 
         <div class="column">
           <ion-card color="light">
-            <ion-button color="light">
+            <ion-button color="light" (click)='scanCode()'>
               <img src="https://img.icons8.com/3d-fluency/94/null/inspection.png">
             </ion-button>
             <div>
